--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal website portfolio">
-    <title>My Personal Website</title>
+    <title>Learning Computer Science</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #4CAF50;
+            background-color: #648FFF;
             padding: 20px;
             text-align: center;
             color: white;
@@ -97,8 +97,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <p>Your one-stop portfolio and personal blog</p>
+        <h1>Melissa Phillips's Learning Website</h1>
+        <p>Access Educational Repos and a Blog Reviewing Learning Platforms/Tutorials</p>
     </header>
 
     <nav>
@@ -111,13 +111,13 @@
     </nav>
 
     <section class="hero">
-        <h1>Hello, I'm [Your Name]</h1>
-        <p>A software developer passionate about creating innovative solutions.</p>
+        <h1>Hello, I'm Melissa</h1>
+        <p>An educator turned software developer passionate about how people can learn Computer Science skills at home.</p>
     </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a developer with experience in building web applications, mobile apps, and desktop solutions. I love working on challenging projects that require critical thinking and creativity.</p>
+        <p>I am a former Math teacher who trained in Data Science and now works at a Geospatial Data Science Company as a Software Engineering Manager.</p>
     </section>
 
     <section id="projects">
@@ -131,11 +131,11 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out via email at [your.email@example.com] or connect with me on <a href="#">LinkedIn</a>.</p>
+        <p>Feel free to  connect with me on <a href="https://www.linkedin.com/in/melissachantalphillips/">LinkedIn</a>.</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 Melissa Phillips. All rights reserved.</p>
     </footer>
 </body>
 </html>
