--- a/post1.html
+++ b/post1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The First Post -- What am I Trying to Accomplish?</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blogstyle.css">
 </head>
 <body>
     <header>
