Update index.html - color of top bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #648FFF;
+            background-color: #785EFO;
             padding: 20px;
             text-align: center;
             color: white;
