Update index.html - attribute image to creator

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
     </section>
 
     <footer>
+        <p>&copy; Photo by <a href="https://unsplash.com/@alesiaskaz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Alesia Kazantceva</a> on <a href="https://unsplash.com/photos/closeup-photo-of-silver-imac-XLm6-fPwK5Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      .</p>
         <p>&copy; 2025 Melissa Phillips. All rights reserved.</p>
     </footer>
 </body>
