Update index.html - add new hero url and fix header color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #785EFO;
+            background-color: #785EF0;
             padding: 20px;
             text-align: center;
             color: white;
@@ -56,7 +56,7 @@
         .hero {
             text-align: center;
             padding: 100px 20px;
-            background: url('hero-image.jpg') no-repeat center center/cover;
+            background: url('alesia-kazantceva-XLm6-fPwK5Q-unsplash.jpeg') no-repeat center center/cover;
             color: white;
         }
 
