Update index.html - update photo attribution

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <section class="hero">
         <h1>Hello, I'm Melissa</h1>
-        <p>An educator turned software developer passionate about how people can learn Computer Science skills at home.</p>
+        <p>An educator turned software developer curious about how people can learn Computer Science skills at home.</p>
     </section>
 
     <section id="about">
@@ -136,8 +136,7 @@
     </section>
 
     <footer>
-        <p>Photo by <a href="https://unsplash.com/@alesiaskaz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Alesia Kazantceva</a> on <a href="https://unsplash.com/photos/closeup-photo-of-silver-imac-XLm6-fPwK5Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-      .</p>
+        <p>Photo by <a href="https://unsplash.com/@laurenmancke?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Lauren Mancke</a> on <a href="https://unsplash.com/photos/turned-off-macbook-pro-beside-white-ceramic-mug-filled-with-coffee-aOC7TSLb1o8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
         <p>&copy; 2025 Melissa Phillips. All rights reserved.</p>
     </footer>
 </body>
