--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             text-align: center;
             padding: 150px 20px;
             background: url('lauren-mancke-aOC7TSLb1o8-unsplash.jpeg') no-repeat center center/cover;
-            color: #2C2C2C;
+            color: white;
         }
 
         .hero h1 {
