--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         .hero {
             text-align: center;
-            padding: 150px 20px;
+            padding: 300px 20px;
             background: url('lauren-mancke-aOC7TSLb1o8-unsplash.jpeg') no-repeat center center/cover;
             color: white;
         }
@@ -112,21 +112,21 @@
     </nav>
 
     <section class="hero">
-        <h1>Hello, I'm Melissa</h1>
-        <p>An educator turned software developer curious about how people can learn Computer Science skills at home.</p>
+        <h1>Let's learn together...</h1>
+        <p>.</p>
     </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a former Math teacher who trained in Data Science and now works at a Geospatial Data Science Company as a Software Engineering Manager.</p>
+        <p>I'm an educator turned software developer curious about how people can learn Computer Science skills at home. I transtioned from Math Teaching by earning a Data Science degree, and now I work at a Geospatial Data Science Company as a Software Engineering Manager.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Project 1:</strong> Description of your project.</li>
-            <li><strong>Project 2:</strong> Description of your project.</li>
-            <li><strong>Project 3:</strong> Description of your project.</li>
+            <li><strong>Project 1:</strong> Port Boundaries -- a Summary of my Internship</li>
+            <li><strong>Project 2:</strong> Tree Canopies and Summer Heat/li>
+            <li><strong>Project 3:</strong> From ADSB Obs to Air Tracks</li>
         </ul>
     </section>
 
