Update index.html - updating to edited photo

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         .hero {
             text-align: center;
             padding: 100px 20px;
-            background: url('lauren-mancke-aOC7TSLb1o8-unsplash.jpeg') no-repeat center center/cover;
-            color: white;
+            background: url('alesia-kazantceva-XLm6-fPwK5Q-unsplash.jpeg') no-repeat center center/cover;
+            color: #2C2C2C;
         }
 
         .hero h1 {
@@ -136,7 +136,7 @@
     </section>
 
     <footer>
-        <p>Photo by <a href="https://unsplash.com/@laurenmancke?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Lauren Mancke</a> on <a href="https://unsplash.com/photos/turned-off-macbook-pro-beside-white-ceramic-mug-filled-with-coffee-aOC7TSLb1o8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@alesiaskaz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Alesia Kazantceva</a> on <a href="https://unsplash.com/photos/closeup-photo-of-silver-imac-XLm6-fPwK5Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         <p>&copy; 2025 Melissa Phillips. All rights reserved.</p>
     </footer>
 </body>
