Update index.html - fixed typo

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <h2>Projects</h2>
         <ul>
             <li><strong>Project 1:</strong> Port Boundaries -- a Summary of my Internship</li>
-            <li><strong>Project 2:</strong> Tree Canopies and Summer Heat/li>
+            <li><strong>Project 2:</strong> Tree Canopies and Summer Heat</li>
             <li><strong>Project 3:</strong> From ADSB Obs to Air Tracks</li>
         </ul>
     </section>
