Update blog.html - updating Blog titles

--- a/blog.html
+++ b/blog.html
@@ -25,14 +25,14 @@
     <section>
         <h2>Recent Posts</h2>
         <ul>
-            <li><a href="post1.html">Post Title 1</a> - <small>January 1, 2025</small></li>
-            <li><a href="post2.html">Post Title 2</a> - <small>December 15, 2024</small></li>
-            <li><a href="post3.html">Post Title 3</a> - <small>November 20, 2024</small></li>
+            <li><a href="post1.html">And So It Begins...</a> - <small>January 1, 2025</small></li>
+            <li><a href="post2.html">Placeholder A</a> - <small>Jan 15, 2025</small></li>
+            <li><a href="post3.html">Placeholder B</a> - <small>January 30, 2025</small></li>
         </ul>
     </section>
 
     <footer>
-        <p>&copy; 2025 Melissa. All rights reserved.</p>
+        <p>&copy; 2025 Melissa Phillips. All rights reserved.</p>
     </footer>
 </body>
 </html>
