--- a/post1.html
+++ b/post1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The First Post -- What am I Trying to Accomplish?</title>
+    <title>And So It Begins...</title>
     <link rel="stylesheet" href="blogstyle.css">
 </head>
 <body>
     <header>
-        <h1>Post 1: What am I Trying to Accomplish?</h1>
+        <h1>Post 1: And So It Begins...</h1>
         <p><small>Published on January 4, 2025</small></p>
     </header>
 
@@ -23,7 +23,7 @@
     </nav>
 
     <section>
-        <p>This is the content of your blog post. You can add images, code snippets, and anything else you'd like.</p>
+        <p>This is the first blog post.</p>
     </section>
 
     <footer>
