Update blog.html - Hero text

--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,10 @@
         </ul>
     </nav>
 
+    <section class="hero">
+        <h1>My Thoughts on the Resources...</h1>>
+    </section>
+
     <section>
         <h2>Recent Posts</h2>
         <ul>
