Update blog.html - fix typo

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     </nav>
 
     <section class="hero">
-        <h1>My Thoughts on the Resources...</h1>>
+        <h1>My Thoughts on the Resources...</h1>
     </section>
 
     <section>
